feat: add favorites structure
