# src/routes/favorites/favorites.service.ts
@@ -1,15 +1,15 @@
 import { Injectable } from '@nestjs/common';
-import { CreateTrackDto } from './tracks/dto/create-track.dto';
+import { CreateTrackDto } from './favorites/dto/favorites-track.dto';
 import { v4 as uuidv4 } from 'uuid';
-import { Track } from './tracks/entities/track.entity';
-import { UpdateTrackDto } from './tracks/dto/update-track.dto';
+import { FavoritesRepsonse } from './favorites/entities/favorites.entity';
+import { UpdateTrackDto } from './favorites/dto/update-track.dto';
 import { InMemoryStore } from '../../data/data';
 
 @Injectable()
-export class TracksService {
+export class FavoritesService {
   constructor(private inMemoryStore: InMemoryStore) { }
   // public tracks: Track[] = [];
-  public async create(createTrackDto: CreateTrackDto): Promise<Track> {
+  public async create(createTrackDto: CreateTrackDto): Promise<FavoritesRepsonse> {
     const artist = this.inMemoryStore.artists.find((artist) => artist.id === createTrackDto.artistId);
     const album = this.inMemoryStore.albums.find((album) => album.id === createTrackDto.albumId);
 
@@ -22,16 +22,16 @@ export class TracksService {
     return this.inMemoryStore.tracks.at(-1);
   }
 
-  findAll(): Track[] {
+  findAll(): FavoritesRepsonse[] {
     return this.inMemoryStore.tracks;
   }
 
-  findOne(id: string): Track {
+  findOne(id: string): FavoritesRepsonse {
     const finded = this.inMemoryStore.tracks.find((user) => user.id === id);
     return finded
   }
 
-  update(id: string, updateTrackDto: UpdateTrackDto): Track {
+  update(id: string, updateTrackDto: UpdateTrackDto): FavoritesRepsonse {
     const i = this.inMemoryStore.tracks.findIndex((user) => user.id === id);
     if (i === -1) return null;
     const artist = this.inMemoryStore.artists.find((artist) => artist.id === updateTrackDto.artistId);
@@ -46,7 +46,7 @@ export class TracksService {
     return this.inMemoryStore.tracks[i];
   }
 
-  remove(id: string): Track {
+  remove(id: string): FavoritesRepsonse {
     const i = this.inMemoryStore.tracks.findIndex((user) => user.id === id);
     if (i === -1) return null;
     const user = this.inMemoryStore.tracks[i];
